# gish

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
audio/: audio.c  audio.h
cmake/: FindOgg.cmake  FindVorbis.cmake
game/: animation.c  animation.h  audio.h  block.h  boss.h  config.h  credits.h  custom.h  damage.h  editor.h  game.c  game.h  gamemenu.h  glext.c  glext.h  high.h  level.h  lighting.h  logic.h  mainmenu.h  mappack.h  music.h  object.h  options.c  options.h  physics.h  player.c  player.h  prerender.h  random.h  record.h  render.c  render.h  replay.h  ropeedit.c  ropeedit.h  setup.h  socket.c  socket.h  sprite.c  (+4 more)
input/: joystick.c  joystick.h  keyboard.h  mouse.h
math/: intersec.h  vector.h
menu/: menu.c  menu.h
parser/: parser.c  parser.h
physics/: bond.h  particle.h
sdl/: endian.c  endian.h  event.h  file.h  video.c  video.h
src/: config.h  config.h.in  main.c
src/audio/: audio.c  audio.h
src/game/: ai.c  ai.h  animation.c  animation.h  audio.c  audio.h  block.c  block.h  boss.c  boss.h  config.c  config.h  credits.c  custom.c  custom.h  damage.c  editor.c  editor.h  english.h  game.c  game.h  gamemenu.c  gconfig.c  glext.c  glext.h  high.c  high.h  level.c  level.h  lighting.c  logic.c  mainmenu.c  mappack.c  music.c  music.h  object.c  object.h  objedit.c  objedit.h  objfunc.c  (+30 more)
src/input/: joystick.c  joystick.h  keyboard.c  keyboard.h  mouse.c  mouse.h
src/math/: intersec.c  math.h  vector.c  vector.h
src/menu/: menu.c  menu.h
src/parser/: parser.c  parser.h
src/physics/: bond.c  bond.h  object.c  object.h  particle.c  particle.h
src/sdl/: endian.c  event.c  event.h  file.c  file.h  globbing.c  physfsrwops.c  platform.c  platform.h  string.c  string.h  video.c  video.h
src/video/: gl.h  glad.c  glad.h  glext.c  glext.h  glfunc.c  glfunc.h  text.c  text.h  texture.c  texture.h
video/: text.h  texture.h
